# godnet

./: CMakeLists.txt  README.md
include/godnet/: CMakeLists.txt  config.hpp
include/godnet/network/: endpoint.cpp  endpoint.hpp  socket_ops.hpp  socket_types.hpp
test/: CMakeLists.txt  endpoint_test.cpp
